--- a/landing-page-1/work.css
+++ b/landing-page-1/work.css
@@ -35,6 +35,12 @@ h3 {
 
 .findout {
     background-color: orange;
+    border-radius: 30px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin: 15%;
 }
 
 .fixed {
